# ting-tuan-zi-discordBot

./: .gitignore  README.md  pyproject.toml
env/: requirements.txt
src/: Bot.py  KAMUwiki.py  main.py  test.py  yamlParser.py
src/cmds/: cmds.py
src/cog/: calendar.py  festival.py  fun.py  system.py  vote.py
src/cog/Base/: Cog_Base.py
src/config/: config.py
src/models/: vote.py
src/postgres/: postgres.py
src/schemas/: vote.py
src/services/: calendar.py  vote.py
src/services/vote/: vote.py
src/setting/: .env  setting.py
src/utills/: AsyncHttpRequest.py
src/utills/calendar/: calendar.py
