[tool.poetry]
name = "kamuwiki"
version = "0.1.0"
description = ""
authors = ["asd24684782 <asd24684782@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.0.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
